// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageNotice matches the snapshot by default 1`] = `null`;

exports[`LanguageNotice matches the snapshot when showLanguageNotice equals true 1`] = `
<p
  className="LanguageNotice__YoastLanguageNotice-sc-3hyg3c-0 gArKMg"
>
  Your site language is set to 
  <strong>
    English
  </strong>
  . If this is not correct, contact your site administrator.
</p>
`;

exports[`LanguageNotice matches the snapshot with a changed language link 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

<p
  className="LanguageNotice__YoastLanguageNotice-sc-3hyg3c-0 gArKMg"
>
  Your site language is set to 
  <strong>
    English
  </strong>
  . 
  <a
    className="LanguageNotice__ChangeLanguageLink-sc-3hyg3c-1 gxiHHm"
    href="http://www.example.com"
    rel="noopener"
    target="_blank"
  >
    Change language
    <span
      className="c0"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</p>
`;

exports[`LanguageNotice matches the snapshot with another language 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

<p
  className="LanguageNotice__YoastLanguageNotice-sc-3hyg3c-0 gArKMg"
>
  Your site language is set to 
  <strong>
    Nederlands
  </strong>
  . 
  <a
    className="LanguageNotice__ChangeLanguageLink-sc-3hyg3c-1 gxiHHm"
    href="http://www.example.com"
    rel="noopener"
    target="_blank"
  >
    Change language
    <span
      className="c0"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</p>
`;
